[gd_scene load_steps=44 format=2]

[ext_resource path="res://Ground.tres" type="TileSet" id=1]
[ext_resource path="res://Grass.tres" type="TileSet" id=2]
[ext_resource path="res://GUI/user_interface/construct_button/lake.png" type="Texture" id=3]
[ext_resource path="res://GUI/user_interface/creature_button.png" type="Texture" id=4]
[ext_resource path="res://GUI/user_interface/entities_counter/button_show_item_tree/show_item_tree_button.png" type="Texture" id=5]
[ext_resource path="res://GUI/strength_logo.png" type="Texture" id=6]
[ext_resource path="res://GUI/water_logo.png" type="Texture" id=7]
[ext_resource path="res://item_2.gd" type="Script" id=8]
[ext_resource path="res://item_3.gd" type="Script" id=9]
[ext_resource path="res://item_6.gd" type="Script" id=10]
[ext_resource path="res://GUI/user_interface/construct_button/mountain_pressed.png" type="Texture" id=11]
[ext_resource path="res://number_of_fluffisprout.gd" type="Script" id=12]
[ext_resource path="res://GUI/user_interface/background/UI_background.png" type="Texture" id=13]
[ext_resource path="res://GUI/user_interface/robot_button/sprites/robot_button_pressed.png" type="Texture" id=14]
[ext_resource path="res://item_5.gd" type="Script" id=15]
[ext_resource path="res://item_4.gd" type="Script" id=16]
[ext_resource path="res://GUI/user_interface/creature_button_pressed.png" type="Texture" id=17]
[ext_resource path="res://Camera2D.gd" type="Script" id=18]
[ext_resource path="res://animal_counter.gd" type="Script" id=19]
[ext_resource path="res://areas.gd" type="Script" id=20]
[ext_resource path="res://font/bold_font.tres" type="DynamicFont" id=21]
[ext_resource path="res://Water.tres" type="TileSet" id=22]
[ext_resource path="res://day_counter.gd" type="Script" id=23]
[ext_resource path="res://Ground.gd" type="Script" id=24]
[ext_resource path="res://GUI/user_interface/robot_button/sprites/robot_button_disabled.png" type="Texture" id=25]
[ext_resource path="res://game_start.gd" type="Script" id=26]
[ext_resource path="res://GUI/user_interface/robot_button/sprites/robot_button.png" type="Texture" id=27]
[ext_resource path="res://GUI/user_interface/construct_button/mountain.png" type="Texture" id=28]
[ext_resource path="res://GUI/user_interface/construct_button/lake_pressed.png" type="Texture" id=29]
[ext_resource path="res://GUI/close_icon.png" type="Texture" id=30]
[ext_resource path="res://item_1.gd" type="Script" id=31]
[ext_resource path="res://GUI/user_interface/entities_counter/button_show_item_tree/show_item_tree_button_clicked.png" type="Texture" id=32]
[ext_resource path="res://strength_counter.gd" type="Script" id=33]
[ext_resource path="res://water_counter.gd" type="Script" id=34]
[ext_resource path="res://year_counter.gd" type="Script" id=35]
[ext_resource path="res://GUI/clock/clock.tscn" type="PackedScene" id=36]
[ext_resource path="res://Water.gd" type="Script" id=37]
[ext_resource path="res://Grass.gd" type="Script" id=38]
[ext_resource path="res://YSort.gd" type="Script" id=39]
[ext_resource path="res://end_of_day.gd" type="Script" id=40]
[ext_resource path="res://GUI/close_icon_clicked.png" type="Texture" id=41]
[ext_resource path="res://font/font.tres" type="DynamicFont" id=42]

[sub_resource type="Animation" id=1]
resource_name = "day_and_night"
length = 60.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("daylight:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 8, 25, 30, 35, 39, 60 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.611765, 0.564706, 0.996078, 1 ), Color( 0.752941, 0.886275, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.807843, 0.756863, 1 ), Color( 1, 0.807843, 0.756863, 1 ), Color( 0.611765, 0.564706, 0.996078, 1 ), Color( 0.611765, 0.564706, 0.996078, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rainy_daylight:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 8, 25, 30, 35, 39, 60 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.611765, 0.564706, 0.996078, 1 ), Color( 0.45098, 0.627451, 0.780392, 1 ), Color( 0.52549, 0.686275, 0.866667, 1 ), Color( 0.553695, 0.646531, 0.908974, 1 ), Color( 0.643137, 0.588235, 0.87451, 1 ), Color( 0.637909, 0.584314, 0.894771, 1 ), Color( 0.611765, 0.564706, 0.996078, 1 ), Color( 0.611765, 0.564706, 0.996078, 1 ) ]
}

[node name="game_start" type="Node2D"]
script = ExtResource( 26 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, 25 )
current = true
smoothing_enabled = true
script = ExtResource( 18 )

[node name="rainy_daylight" type="CanvasModulate" parent="."]
visible = false
color = Color( 0.611765, 0.564706, 0.996078, 1 )

[node name="daylight" type="CanvasModulate" parent="."]
color = Color( 0.611765, 0.564706, 0.996078, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "day_and_night"
anims/day_and_night = SubResource( 1 )

[node name="Water" type="TileMap" parent="."]
tile_set = ExtResource( 22 )
cell_size = Vector2( 100, 100 )
collision_mask = 3
format = 1
script = ExtResource( 37 )

[node name="Ground" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 100, 100 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
collision_mask = 3
format = 1
script = ExtResource( 24 )

[node name="Grass" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 100, 100 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
collision_mask = 3
format = 1
script = ExtResource( 38 )

[node name="areas" type="Node2D" parent="."]
script = ExtResource( 20 )

[node name="rain_ground" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YSort" type="YSort" parent="."]
script = ExtResource( 39 )

[node name="rain_drop" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="animal_counter" type="Control" parent="CanvasLayer"]
margin_left = -25.0
margin_top = 69.0
margin_right = 173.0
margin_bottom = 1149.0
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui_background" type="TextureRect" parent="CanvasLayer"]
anchor_top = 0.82
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -4.0
margin_bottom = 89.6
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="strength_logo" type="TextureRect" parent="CanvasLayer"]
margin_left = 1835.0
margin_top = 961.0
margin_right = 1873.0
margin_bottom = 1004.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="strength_counter" type="Label" parent="CanvasLayer"]
anchor_left = 0.949
anchor_top = 0.937
anchor_right = 0.981
anchor_bottom = 0.979
margin_left = -0.0800781
margin_top = 0.039978
margin_right = -0.520142
margin_bottom = -0.320068
custom_fonts/font = ExtResource( 21 )
custom_colors/font_color = Color( 0.764706, 0.235294, 0.0823529, 1 )
custom_colors/font_outline_modulate = Color( 0.764706, 0.235294, 0.0823529, 1 )
align = 1
valign = 1
script = ExtResource( 33 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="water_logo" type="TextureRect" parent="CanvasLayer"]
margin_left = 1750.0
margin_top = 961.0
margin_right = 1787.0
margin_bottom = 1004.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="water_counter" type="Label" parent="CanvasLayer"]
anchor_left = 0.906
anchor_top = 0.937
anchor_right = 0.937
anchor_bottom = 0.979
margin_left = -0.52002
margin_top = 0.039978
margin_right = -0.0400391
margin_bottom = -0.320068
custom_fonts/font = ExtResource( 21 )
custom_colors/font_color = Color( 0.054902, 0.396078, 0.584314, 1 )
custom_colors/font_outline_modulate = Color( 0.054902, 0.396078, 0.584314, 1 )
align = 1
valign = 1
script = ExtResource( 34 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="day_counter" type="Label" parent="CanvasLayer"]
margin_left = 1569.0
margin_top = 1012.0
margin_right = 1629.0
margin_bottom = 1057.0
custom_fonts/font = ExtResource( 21 )
custom_colors/font_color = Color( 0.690196, 0.384314, 0.356863, 1 )
custom_colors/font_outline_modulate = Color( 0.690196, 0.384314, 0.356863, 1 )
align = 1
valign = 1
script = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="year_counter" type="Label" parent="CanvasLayer"]
margin_left = 1653.0
margin_top = 1012.0
margin_right = 1713.0
margin_bottom = 1057.0
custom_fonts/font = ExtResource( 21 )
custom_colors/font_color = Color( 0.690196, 0.384314, 0.356863, 1 )
custom_colors/font_outline_modulate = Color( 0.690196, 0.384314, 0.356863, 1 )
align = 1
valign = 1
script = ExtResource( 35 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="day_text" type="Label" parent="CanvasLayer"]
margin_left = 1567.0
margin_top = 959.0
margin_right = 1627.0
margin_bottom = 1004.0
custom_fonts/font = ExtResource( 21 )
custom_colors/font_color = Color( 0.956863, 0.905882, 0.968627, 1 )
text = "Day"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="year_text" type="Label" parent="CanvasLayer"]
margin_left = 1653.0
margin_top = 959.0
margin_right = 1713.0
margin_bottom = 1004.0
custom_fonts/font = ExtResource( 21 )
custom_colors/font_color = Color( 0.956863, 0.905882, 0.968627, 1 )
text = "Year"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_tree_button" type="TextureButton" parent="CanvasLayer"]
anchor_left = 0.831
anchor_top = 0.685
anchor_right = 0.968
anchor_bottom = 0.796
margin_left = 106.88
margin_top = 385.458
margin_right = -14.1603
margin_bottom = 408.578
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_stock" type="Control" parent="CanvasLayer"]
margin_left = 560.0
margin_top = 913.0
margin_right = 1359.0
margin_bottom = 1006.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_stock_container" type="HBoxContainer" parent="CanvasLayer/item_stock"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -11.0
margin_bottom = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_1" type="TextureButton" parent="CanvasLayer/item_stock/item_stock_container"]
margin_right = 102.0
margin_bottom = 102.0
rect_min_size = Vector2( 102, 102 )
script = ExtResource( 31 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/item_stock/item_stock_container"]
margin_left = 106.0
margin_right = 136.0
margin_bottom = 102.0
rect_min_size = Vector2( 30, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_2" type="TextureButton" parent="CanvasLayer/item_stock/item_stock_container"]
margin_left = 140.0
margin_right = 242.0
margin_bottom = 102.0
rect_min_size = Vector2( 102, 102 )
script = ExtResource( 8 )

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/item_stock/item_stock_container"]
margin_left = 246.0
margin_right = 276.0
margin_bottom = 102.0
rect_min_size = Vector2( 30, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_3" type="TextureButton" parent="CanvasLayer/item_stock/item_stock_container"]
margin_left = 280.0
margin_right = 382.0
margin_bottom = 102.0
rect_min_size = Vector2( 102, 102 )
script = ExtResource( 9 )

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/item_stock/item_stock_container"]
margin_left = 386.0
margin_right = 416.0
margin_bottom = 102.0
rect_min_size = Vector2( 30, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_4" type="TextureButton" parent="CanvasLayer/item_stock/item_stock_container"]
margin_left = 420.0
margin_right = 522.0
margin_bottom = 102.0
rect_min_size = Vector2( 102, 102 )
script = ExtResource( 16 )

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/item_stock/item_stock_container"]
margin_left = 526.0
margin_right = 556.0
margin_bottom = 102.0
rect_min_size = Vector2( 30, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_5" type="TextureButton" parent="CanvasLayer/item_stock/item_stock_container"]
margin_left = 560.0
margin_right = 662.0
margin_bottom = 102.0
rect_min_size = Vector2( 102, 102 )
script = ExtResource( 15 )

[node name="MarginContainer5" type="MarginContainer" parent="CanvasLayer/item_stock/item_stock_container"]
margin_left = 666.0
margin_right = 696.0
margin_bottom = 102.0
rect_min_size = Vector2( 30, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_6" type="TextureButton" parent="CanvasLayer/item_stock/item_stock_container"]
margin_left = 700.0
margin_right = 802.0
margin_bottom = 102.0
rect_min_size = Vector2( 102, 102 )
script = ExtResource( 10 )

[node name="entities_button" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fluffisprout" type="TextureButton" parent="CanvasLayer/entities_button"]
margin_left = 1178.55
margin_top = 921.149
margin_right = 1320.55
margin_bottom = 1063.15
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="number_of_fluffisprout" type="Label" parent="CanvasLayer/entities_button/fluffisprout"]
margin_left = 42.0
margin_top = 45.0
margin_right = 101.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 21 )
custom_colors/font_color = Color( 0.87451, 0.827451, 0.909804, 1 )
align = 1
valign = 1
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pond" type="TextureButton" parent="CanvasLayer/entities_button"]
margin_left = 902.0
margin_top = 935.0
margin_right = 1016.0
margin_bottom = 1049.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 29 )
texture_disabled = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/entities_button/pond"]
margin_left = 11.0
margin_top = -24.0
margin_right = 108.0
margin_bottom = -3.0
custom_fonts/font = ExtResource( 42 )
text = "cost 50 str"

[node name="hill" type="TextureButton" parent="CanvasLayer/entities_button"]
margin_left = 1040.0
margin_top = 935.0
margin_right = 1154.0
margin_bottom = 1049.0
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 11 )
texture_disabled = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/entities_button/hill"]
margin_left = 6.0949
margin_top = -20.954
margin_right = 103.095
margin_bottom = 0.0460205
custom_fonts/font = ExtResource( 42 )
text = "cost 50 str"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="robot_button" type="TextureButton" parent="CanvasLayer"]
margin_top = 901.0
margin_right = 192.0
margin_bottom = 1084.0
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 14 )
texture_disabled = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hide_tree_button" type="TextureButton" parent="CanvasLayer"]
margin_left = 662.333
margin_top = 1003.61
margin_right = 709.333
margin_bottom = 1051.61
texture_normal = ExtResource( 30 )
texture_pressed = ExtResource( 41 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/hide_tree_button"]
margin_left = 56.0
margin_top = 8.0
margin_right = 256.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 21 )
text = "hide trees"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clock_node" type="Node2D" parent="CanvasLayer"]

[node name="clock" parent="CanvasLayer/clock_node" instance=ExtResource( 36 )]
position = Vector2( 1439.99, 992.483 )

[node name="show tree" type="TextureButton" parent="CanvasLayer"]
margin_left = 660.879
margin_top = 934.519
margin_right = 707.879
margin_bottom = 982.519
texture_normal = ExtResource( 30 )
texture_pressed = ExtResource( 41 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/show tree"]
margin_left = 52.0
margin_right = 252.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 21 )
text = "show tree"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end_of_day" type="Timer" parent="."]
wait_time = 60.0
autostart = true
script = ExtResource( 40 )
[connection signal="day_number" from="." to="CanvasLayer/day_counter" method="_on_Game_day_number"]
[connection signal="number_of_fluffilus" from="." to="CanvasLayer/animal_counter" method="_on_game_start_number_of_fluffilus"]
[connection signal="number_of_pearls" from="." to="CanvasLayer/entities_button/fluffisprout/number_of_fluffisprout" method="_on_game_start_number_of_pearls"]
[connection signal="number_of_strength" from="." to="CanvasLayer/strength_counter" method="_on_Game_number_of_strength"]
[connection signal="number_of_water" from="." to="CanvasLayer/water_counter" method="_on_Game_number_of_water"]
[connection signal="year" from="." to="CanvasLayer/year_counter" method="_on_game_start_year"]
[connection signal="pressed" from="CanvasLayer/item_tree_button" to="." method="_on_item_tree_button_pressed"]
[connection signal="pressed" from="CanvasLayer/item_stock/item_stock_container/item_1" to="." method="_on_item_1_pressed"]
[connection signal="pressed" from="CanvasLayer/item_stock/item_stock_container/item_2" to="." method="_on_item_2_pressed"]
[connection signal="pressed" from="CanvasLayer/item_stock/item_stock_container/item_3" to="." method="_on_item_3_pressed"]
[connection signal="pressed" from="CanvasLayer/item_stock/item_stock_container/item_4" to="." method="_on_item_4_pressed"]
[connection signal="pressed" from="CanvasLayer/item_stock/item_stock_container/item_5" to="." method="_on_item_5_pressed"]
[connection signal="pressed" from="CanvasLayer/item_stock/item_stock_container/item_6" to="." method="_on_item_6_pressed"]
[connection signal="pressed" from="CanvasLayer/entities_button/fluffisprout" to="." method="_on_fluffisprout_pressed"]
[connection signal="pressed" from="CanvasLayer/entities_button/pond" to="." method="_on_pond_pressed"]
[connection signal="pressed" from="CanvasLayer/entities_button/hill" to="." method="_on_hill_pressed"]
[connection signal="pressed" from="CanvasLayer/robot_button" to="." method="_on_robot_button_pressed"]
[connection signal="pressed" from="CanvasLayer/hide_tree_button" to="." method="_on_hide_tree_button_pressed"]
[connection signal="pressed" from="CanvasLayer/show tree" to="." method="_on_show_tree_pressed"]
[connection signal="timeout" from="end_of_day" to="." method="_on_end_of_day_timeout"]
